--- a/install
+++ b/install
@@ -45,6 +45,11 @@ copyFiles() {
         ${COMMAND} microSettings.json ~/.config/micro/settings.json
     fi
 
+    if addFile wezterm; then
+        mkdir --parents --verbose ~/.config/wezterm/
+        ${COMMAND} wezterm.lua ~/.config/wezterm/wezterm.lua
+    fi
+
     if addFile sublime-text; then
         mkdir --parents --verbose ~/.config/sublime-text-3/Packages/User
         ${COMMAND} Preferences.sublime-settings ~/.config/sublime-text-3/Packages/User/Preferences.sublime-settings
