--- a/install
+++ b/install
@@ -17,6 +17,7 @@ FILE_LIST=(
     ["mpv"]="${HOME}/.config/mpv"
     ["wezterm.lua"]="${HOME}/.config/wezterm/wezterm.lua"
     ["Preferences.sublime-settings.json"]="${HOME}/.config/sublime-text/Packages/User/Preferences.sublime-settings"
+    ["Default (Linux).sublime-keymap.json"]="${HOME}/.config/sublime-text/Packages/User/Default (Linux).sublime-keymap"
     ["terminator.config"]="${HOME}/.config/terminator/config"
     ["starship.toml"]="${HOME}/.config/starship.toml"
     ["alacritty.yml"]="${HOME}/.config/alacritty/alacritty.yml"
