--- a/install
+++ b/install
@@ -72,6 +72,7 @@ while true; do
         "Display dotfile diffs" \
         "Move current files to git" \
         "Install VSCode Extensions" \
+        "Install SpaceVim" \
         "Exit"
     echo
     if [[ -z $REPLY ]]; then exit; fi
@@ -152,6 +153,15 @@ while true; do
             done <VSCodeExtensions.txt
         ;;
 
+    9) 
+        if ! command -v vim &>/dev/null && ! command -v nvim &>/dev/null; then echo >&2 "${RED}Can't find ${CYAN}vim ${RED}or ${CYAN}nvim${RED}...${RESETCOLOR}" && exit 1; fi
+        spacevim_install_script=$(curl -sLf https://spacevim.org/install.sh)
+        if  command -v code &>/dev/null; then
+            <<<$space_install_script bat
+        else
+            <<<$space_install_script cat
+        fi
+        <<<$space_install_script | bash
     *) echo >&2 "${RED}Error: Not a valid input${RESETCOLOR}" ;;
     esac
     echo
