--- a/install
+++ b/install
@@ -153,15 +153,20 @@ while true; do
             done <VSCodeExtensions.txt
         ;;
 
-    9) 
-        if ! command -v vim &>/dev/null && ! command -v nvim &>/dev/null; then echo >&2 "${RED}Can't find ${CYAN}vim ${RED}or ${CYAN}nvim${RED}...${RESETCOLOR}" && exit 1; fi
-        spacevim_install_script=$(curl -sLf https://spacevim.org/install.sh)
-        if  command -v code &>/dev/null; then
-            <<<$space_install_script bat
-        else
-            <<<$space_install_script cat
+    9)
+        if ! command -v vim &>/dev/null && ! command -v nvim &>/dev/null; then
+            echo >&2 "${RED}Can't find ${CYAN}vim ${RED}or ${CYAN}nvim${RED}...${RESETCOLOR}"
+            exit 1
         fi
-        <<<$space_install_script | bash
+        spacevim_install_script=$(curl -sLf "https://spacevim.org/install.sh")
+        if command -v bat &>/dev/null; then
+            <<<$spacevim_install_script bat
+        else
+            <<<$spacevim_install_script cat
+        fi
+        read -n 1 -s -r -p "${YELLOW}Press any key to continue...${RESETCOLOR}"
+        <<<$spacevim_install_script bash
+        ;;
     *) echo >&2 "${RED}Error: Not a valid input${RESETCOLOR}" ;;
     esac
     echo
